mermaid moet in visible screen

--- a/v2/Makefile
+++ b/v2/Makefile
@@ -1,13 +1,13 @@
 
 all: execute/collectfwdata execute/webserver execute/collectfwdata execute/utils
 
-execute/utils: cmd/utils/utils.go pkg/sharedlib/funcs.go pkg/sharedlib/database.go
+execute/utils: cmd/utils/utils.go pkg/sharedlib/parse.go pkg/sharedlib/database.go
 	go build -o execute/utils cmd/utils/utils.go
 
-execute/webserver: cmd/webserver/webserver.go pkg/sharedlib/funcs.go pkg/sharedlib/database.go pkg/sharedlib/report.go
+execute/webserver: cmd/webserver/webserver.go pkg/sharedlib/parse.go pkg/sharedlib/database.go pkg/sharedlib/report.go
 	go build -o execute/webserver cmd/webserver/webserver.go
 
-execute/collectfwdata: cmd/collectfwdata/collectfwdata.go pkg/sharedlib/funcs.go pkg/sharedlib/database.go pkg/sharedlib/report.go
+execute/collectfwdata: cmd/collectfwdata/collectfwdata.go pkg/sharedlib/parse.go pkg/sharedlib/database.go pkg/sharedlib/report.go
 	go build -o execute/collectfwdata cmd/collectfwdata/collectfwdata.go
 
 run:
