--- a/v2/Makefile
+++ b/v2/Makefile
@@ -1,7 +1,7 @@
 
 all: execute/collectfwdata execute/webserver execute/collectfwdata execute/utils
 
-execute/utils: cmd/utils/utils.go pkg/sharedlib/parse.go pkg/sharedlib/database.go
+execute/utils: cmd/utils/utils.go pkg/sharedlib/parse.go pkg/sharedlib/database.go pkg/sharedlib/report.go
 	go build -o execute/utils cmd/utils/utils.go
 
 execute/webserver: cmd/webserver/webserver.go pkg/sharedlib/parse.go pkg/sharedlib/database.go pkg/sharedlib/report.go
